# RAGTrace

./: .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  <MagicMock name='DATABASE_PATH' id='4803236112'>  <MagicMock name='DATABASE_PATH' id='6416742096'>  CLAUDE.md  Dockerfile  ENTERPRISE_패키지_시스템.md  LICENSE  RAGAS_METRICS.md  README.md  SETUP-WINDOWS.md  WINDOWS_패키지_총정리.md  analyze_evaluation_data.py  cli.py  comprehensive_dashboard_analysis.md  config.py  create-complete-offline-package.sh  create-complete-offline.ps1  create-enterprise-offline.py  create-offline-simple.bat  create-windows-offline-safe.ps1  create-windows-offline.ps1  dashboard.py  debug_api_connection.py  debug_evaluation.py  deep_trace_analysis.py  dev_test_basic_connection.py  dev_test_minimal_ragas.py  dev_test_prompt_evaluation.py  dev_test_simple_evaluation.py  docker-compose.yml  docker-test.sh  enterprise-validator.py  hello.py  imported_data.json  justfile  my_result.json  (+34 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  deploy.yml  docker-publish.yml  docker.yml  release.yml  test.yml
.streamlit/: config.toml
cli_exports/: ragas_analysis_report_20250624_075806.md
dashboard/: evaluations.db  main.py
dashboard/components/: detailed_analysis.py  metrics_explanation.py  performance_monitor.py
data/: energy_evaluation_sample.xlsx  evaluation_data.json  evaluation_data_small.json  evaluation_data_variant1.json  invalid_data.json  korean_tech_evaluation.csv  medical_ai_evaluation_sample.xlsx  sample_evaluation_data.csv  test_data.json
data/db/: evaluations.db
docs/: ARCHITECTURE_AND_DEVELOPMENT.md  Architecture_Analysis_Report_Rewritten.md  Architecture_And_Debugging_History.md  BGE_M3_GPU_Guide.md  Comprehensive_Debugging_Report.md  Comprehensive_Debugging_Report_v2.md  Comprehensive_Debugging_Report_v3.md  Data_Import_Guide.md  Debugging_Report.md  Development_Guide.md  Functional_Test_Plan.md  HCX-005_Customization_Manual.md  INSTALLATION_GUIDE.md  LLM_Customization_Manual.md  Offline_LLM_Integration_Guide.md  PROJECT_STRUCTURE.md  Project_Cleanup_Plan.md  RAGAS_METRICS.md  README.md  TROUBLESHOOTING.md  Troubleshooting_Guide.md  User_Scenario_Analysis.md  User_Scenario_Analysis_Report.md  User_Scenario_Analysis_Report_Rewritten.md  WINDOWS_MANUAL_SETUP.md  WINDOWS_SETUP.md  Windows_Offline_Installation_Guide.md  Windows_설치_가이드.md  clean_architecture_summary.md  comprehensive_dashboard_analysis.md  development_manual.md  문제해결_가이드.md
docs/architecture/: Comprehensive_Architecture_Analysis_Report.md
docs/archive/: Enterprise_Package_System.md  Post_Refactoring_Architecture_Analysis_Report.md  WINDOWS_오류해결가이드.md  Windows_Setup_Guide.md
docs/deployment/: Air_Gapped_Enhancement_Plan.md  Docker_Deployment_Guide.md  Windows_Complete_Guide.md
docs/development/: UV_Setup_Guide.md
exports/: eval_0236d876_analysis.md  eval_0236d876_detailed.csv  eval_0236d876_summary.csv  eval_11b6e9cc_analysis.md  eval_11b6e9cc_detailed.csv  eval_11b6e9cc_summary.csv  eval_135faf37_analysis.md  eval_135faf37_detailed.csv  eval_135faf37_summary.csv  eval_1faf21e0_analysis.md  eval_1faf21e0_detailed.csv  eval_1faf21e0_summary.csv  eval_2209e376_analysis.md  eval_2209e376_detailed.csv  eval_2209e376_summary.csv  eval_25ee1c27_analysis.md  eval_25ee1c27_detailed.csv  eval_25ee1c27_summary.csv  eval_2778fad2_analysis.md  eval_2778fad2_detailed.csv  eval_2778fad2_summary.csv  eval_28b985cb_analysis.md  eval_28b985cb_detailed.csv  eval_28b985cb_summary.csv  eval_45c51770_analysis.md  eval_45c51770_detailed.csv  eval_45c51770_summary.csv  eval_4b541b19_analysis.md  eval_4b541b19_detailed.csv  eval_4b541b19_summary.csv  eval_55b69b5b_analysis.md  eval_55b69b5b_detailed.csv  eval_55b69b5b_summary.csv  eval_65e0beb7_analysis.md  eval_65e0beb7_detailed.csv  eval_65e0beb7_summary.csv  eval_79f1e154_analysis.md  eval_79f1e154_detailed.csv  eval_79f1e154_summary.csv  eval_84565829_analysis.md  (+26 more)
quick_results/: evaluation_data_variant1_20250624_083617.json  medical_ai_evaluation_sample_converted.json  ragas_analysis_report_20250624_083749.md  ragas_evaluation_20250624_083749.csv  ragas_summary_20250624_083749.csv
reports/: test_report_20250616_020634.md  test_report_20250616_020655.md
results/: ragas_analysis_report_20250624_082706.md  ragas_analysis_report_20250624_083027.md  ragas_evaluation_20250624_083027.csv  ragas_summary_20250624_082706.csv
scripts/: analyze_evaluation_data.py  deep_trace_analysis.py  generate_test_report.py
scripts/analysis/: test_data_loading.py
scripts/offline-packaging/: create-enterprise-offline.py  create-offline-package.ps1  create-simple-offline.sh  create-simple-package.sh  create-windows-offline-safe.ps1
src/: config.py  container.py
src/application/: services.py
src/container/: __init__.py  configuration_container.py  main_container.py  service_registry.py
src/domain/: __init__.py  models.py  prompts.py
src/factories/: __init__.py  evaluation_factory.py  repository_factory.py
src/infrastructure/: __init__.py  ragas_eval.py
src/presentation/: __init__.py  main.py
src/utils/: paths.py  ragas_prompts.py
temp/: detailed_evaluation_analysis.json  execution_traces.json
test_correctness_report/: ragas_analysis_report_20250624_083352.md
test_exports/: ragas_analysis_report_20250624_080854.md  ragas_evaluation_20250624_080854.csv  ragas_summary_20250624_080854.csv  test_analysis.md  test_detailed.csv  test_summary.csv
test_results/: evaluation_data_small_20250626_104003.json  korean_tech_evaluation_converted.json  ragas_analysis_report_20250626_104137.md  ragas_evaluation_20250626_104137.csv  ragas_summary_20250626_104137.csv
test_run/: evaluation_results.json  sample_data.csv  sample_data.json
tests/: conftest.py  test_container.py
tests/domain/: test_evaluation_data.py  test_evaluation_result.py
tests/functional/: __init__.py  test_basic_workflows.py  test_cli_commands.py  test_cli_workflows.py  test_config_and_environment.py  test_data_import.py  test_error_scenarios.py  test_evaluation_workflows.py  (+1 more)
(+118 files in other folders)
